@@ -1,3 +1,8 @@
+2012-11-11  Corinna Vinschen  <corinna@vinschen.de>
+
+	* pinfo.cc (_pinfo::commune_request): Accommodate the fact that LONG_MAX
+	does not match sizeof LONG.
+
 2012-11-09  Corinna Vinschen  <corinna@vinschen.de>
 
 	* miscfuncs.cc (case_folded_lower): Change to unsigned char to avoid
